# ModelingPlatform-CompatibleRateDLL

./: .gitignore  CMakeLists.txt  DLL_Declares.txt  LICENSE  README.md  build.bat  rate.cpp  rate.def  rate.h
